--- a/ChordGuessr-1/CSS/style.css
+++ b/ChordGuessr-1/CSS/style.css
@@ -115,23 +115,25 @@ h1.HowTo {
 
 .registerElements {
     display: grid;
-    grid-template-columns:200px 1fr;
-    gap: 10px;
+    grid-template-columns: 150px 1fr;
+    gap: 15px 10px; 
     align-items: center;
-
-    margin: 1 auto;
-    width: 300px;
-    padding-right: 400px;
+    margin: 50px auto; 
+    max-width: 500px;
+    width: 90%; 
+    padding-right: 0; 
     padding-bottom: 50px;
     padding-top: 100px;
 }
 
 label {
-    text-align: center;
+    text-align: right;
+    font-weight: bold;
 }
 
 input {
     padding: 6px;
+    width: 70%;
 }
 
 button.submitButton:hover {
@@ -142,13 +144,13 @@ button.submitButton:hover {
 
 .loginLabels {
     display: grid;
-    grid-template-columns:200px 1fr;
-    gap: 10px;
+    grid-template-columns: 150px 1fr;
+    gap: 15px 10px;
     align-items: center;
-
-    margin: 1 auto;
-    width: 300px;
-    padding-right: 400px;
+    margin: 30px auto 20px auto;
+    max-width: 500px;
+    width: 90%;
+    padding-right: 0;
     padding-bottom: 20px;
 
 }
